# oxideav-tracevfw

./: CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  decode.rs  encode.rs  gdb.rs  main.rs  probe.rs  trace.rs
tests/: break_emits_jsonl.rs  cli.rs  encode_pquant.rs  encode_subcommand.rs  real_codec.rs  round_next_watch_and_fpu.rs
