[package]
name = "oxideav-tracevfw"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Trace + debug CLI for oxideav-vfw — load a Windows codec DLL/AX, probe it, encode/decode test data, log memory watches, set PC breakpoints"
repository = "https://github.com/OxideAV/oxideav-tracevfw"
homepage = "https://github.com/OxideAV/oxideav-tracevfw"
readme = "README.md"
keywords = ["multimedia", "codec", "vfw", "debugger", "trace"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
# `oxideav-vfw` consumed as a published crate. The `trace` feature
# gate landed in oxideav-vfw 0.1.0 (published 2026-05-08).
oxideav-vfw = { version = "0.1", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Round-2 GDB Remote Serial Protocol server. `gdbstub` is the
# well-known pure-Rust RSP implementation (MIT/0BSD-licensed),
# `gdbstub_arch` ships the X86 32-bit register layout we hand to
# the GDB client.
gdbstub = "0.7"
gdbstub_arch = "0.3"

[[bin]]
name = "oxidetracevfw"
path = "src/main.rs"
