[package]
name = "oxideav-tracevfw"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Trace + debug CLI for oxideav-vfw — load a Windows codec DLL/AX, probe it, encode/decode test data, log memory watches, set PC breakpoints"
repository = "https://github.com/OxideAV/oxideav-tracevfw"
homepage = "https://github.com/OxideAV/oxideav-tracevfw"
readme = "README.md"
keywords = ["multimedia", "codec", "vfw", "debugger", "trace"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
# `oxideav-vfw` consumed as a published crate. The `trace` feature
# gate landed in oxideav-vfw 0.1.0 (published 2026-05-08).
oxideav-vfw = { version = "0.1", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Round-2 GDB Remote Serial Protocol server. `gdbstub` is the
# well-known pure-Rust RSP implementation (MIT/0BSD-licensed),
# `gdbstub_arch` ships the X86 32-bit register layout we hand to
# the GDB client.
gdbstub = "0.7"
gdbstub_arch = "0.3"

[features]
# Round 6 P1 — opt-in integration tests that fetch real Windows
# VfW codec fixtures (Indeo 3 / Indeo 4 / Indeo 5) from
# `samples.oxideav.org` (under `codecs/windows/IV5PLAY/`) and
# drive the binary against them. Off by default so the standard
# `cargo test` flow stays fully self-contained — a CI host with
# no outbound network still runs the synthetic-DLL tests
# unchanged. When the feature is on, fetched binaries are cached
# under `target/oxideav-tracevfw-fixtures/` and re-verified by
# SHA-256 on every invocation; tests skip gracefully (printing a
# `[real-codec] skipped` line) when the network or the cache
# write path is unreachable.
integration-real-codec = []

[[bin]]
name = "oxidetracevfw"
path = "src/main.rs"
